logs/Slang/chapter-8/8.12--shallow_copy.sv.log
name: shallow_copy
description: object shallow copy
should_fail: 0
tags: 8.12
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.12--shallow_copy.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.12--shallow_copy.sv:8:2: error: language feature not yet supported
	class test_cls;
	^~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.12--shallow_copy.sv:16:2: error: use of undeclared identifier 'test_cls'
	test_cls test_obj0;
	^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.12--shallow_copy.sv:17:2: error: use of undeclared identifier 'test_cls'
	test_cls test_obj1;
	^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.12--shallow_copy.sv:20:15: error: language feature not yet supported
		test_obj0 = new;
		            ^~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.12--shallow_copy.sv:26:15: error: language feature not yet supported
		test_obj1 = new test_obj0;
		            ^~~~~~~~~~~~~
